--- a/BienestarBovino/app/src/main/res/layout/login.xml
+++ b/BienestarBovino/app/src/main/res/layout/login.xml
@@ -7,36 +7,73 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="320dp"
-        android:layout_height="52dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="546dp" />
-
-    <EditText
         android:id="@+id/editTextTextPassword2"
         android:layout_width="320dp"
         android:layout_height="52dp"
         android:ems="10"
+        android:hint="Ingrese su contraseña"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="416dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.658" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/inicio_sesion"
-        tools:layout_editor_absoluteX="146dp"
-        tools:layout_editor_absoluteY="162dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.231"
+        app:srcCompat="@drawable/inicio_sesion" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="142dp"
-        android:layout_height="21dp"
+        android:layout_width="169dp"
+        android:layout_height="38dp"
         android:text="Bienvenido de vuelta!"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="55dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.101" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="317dp"
+        android:layout_height="68dp"
+        android:text="Aceptar"
+        android:outlineAmbientShadowColor="#04AA6D"
+        android:outlineSpotShadowColor="#04AA6D"
+        android:shadowColor="#04AA6D"
+        android:textColor="#04AA6D"
+        android:textColorHighlight="#04AA6D"
+        android:textColorHint="#04AA6D"
+        android:textColorLink="#04AA6D"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.929" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="319dp"
+        android:layout_height="45dp"
+        android:ems="10"
+        android:hint="Ingrese su correo"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.553" />
+
 </android.support.constraint.ConstraintLayout>
