--- a/BienestarBovino/app/src/main/res/layout/login.xml
+++ b/BienestarBovino/app/src/main/res/layout/login.xml
@@ -13,6 +13,9 @@
         android:ems="10"
         android:hint="Ingrese su contraseña"
         android:inputType="textPassword"
+        android:background="#04AA6D"
+        android:textColorHint="@android:color/white"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -48,13 +51,8 @@
         android:layout_width="317dp"
         android:layout_height="68dp"
         android:text="Aceptar"
-        android:outlineAmbientShadowColor="#04AA6D"
-        android:outlineSpotShadowColor="#04AA6D"
-        android:shadowColor="#04AA6D"
-        android:textColor="#04AA6D"
-        android:textColorHighlight="#04AA6D"
-        android:textColorHint="#04AA6D"
-        android:textColorLink="#04AA6D"
+        android:background="#04AA6D"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -69,6 +67,9 @@
         android:ems="10"
         android:hint="Ingrese su correo"
         android:inputType="textPersonName"
+        android:background="#04AA6D"
+        android:textColorHint="@android:color/white"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
