--- a/BienestarBovino/app/src/main/res/layout/login.xml
+++ b/BienestarBovino/app/src/main/res/layout/login.xml
@@ -13,7 +13,7 @@
         android:ems="10"
         android:hint="Ingrese su contraseña"
         android:inputType="textPassword"
-        android:background="#04AA6D"
+        android:background="#187705"
         android:textColorHint="@android:color/white"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,8 +51,8 @@
         android:layout_width="317dp"
         android:layout_height="68dp"
         android:text="Aceptar"
-        android:background="#04AA6D"
-        android:textColor="@android:color/white"
+        android:background="#187705"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -62,14 +62,14 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
-        android:layout_width="319dp"
-        android:layout_height="45dp"
+        android:layout_width="326dp"
+        android:layout_height="55dp"
+        android:background="#187705"
         android:ems="10"
         android:hint="Ingrese su correo"
         android:inputType="textPersonName"
-        android:background="#04AA6D"
-        android:textColorHint="@android:color/white"
         android:textColor="@android:color/white"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
