--- a/BienestarBovino/app/src/main/res/layout/login.xml
+++ b/BienestarBovino/app/src/main/res/layout/login.xml
@@ -10,12 +10,13 @@
         android:id="@+id/editTextTextPassword2"
         android:layout_width="320dp"
         android:layout_height="52dp"
+        android:background="#1E8708"
         android:ems="10"
         android:hint="Ingrese su contraseña"
         android:inputType="textPassword"
-        android:background="#187705"
-        android:textColorHint="@android:color/white"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -40,6 +41,8 @@
         android:layout_width="169dp"
         android:layout_height="38dp"
         android:text="Bienvenido de vuelta!"
+        android:textAlignment="center"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,24 +53,25 @@
         android:id="@+id/button"
         android:layout_width="317dp"
         android:layout_height="68dp"
+        android:background="#146304"
         android:text="Aceptar"
-        android:background="#187705"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.929" />
+        app:layout_constraintVertical_bias="0.85" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="326dp"
         android:layout_height="55dp"
-        android:background="#187705"
+        android:background="#1E8708"
         android:ems="10"
         android:hint="Ingrese su correo"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
