--- a/BienestarBovino/app/src/main/res/layout/finca.xml
+++ b/BienestarBovino/app/src/main/res/layout/finca.xml
@@ -23,12 +23,13 @@
         android:id="@+id/editTextTextFincaName"
         android:layout_width="298dp"
         android:layout_height="55dp"
-        android:background="#187705"
+        android:background="#1E8708"
+        android:textColor="#FFFFFF"
         android:ems="10"
         android:hint="Ingrese el nombre"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColor="#FFFFFF"
+        android:textAlignment="center"
         android:textColorHint="FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,13 +42,14 @@
         android:id="@+id/editTextTextFincaSize"
         android:layout_width="299dp"
         android:layout_height="60dp"
-        android:background="#187705"
-        android:textColor="#FFFFFF"
-        android:textColorHint="FFFFFF"
+        android:background="#1E8708"
         android:ems="10"
         android:hint="Ingrese el tamaño"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textColorHint="FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -59,7 +61,7 @@
         android:id="@+id/buttonContinue"
         android:layout_width="416dp"
         android:layout_height="57dp"
-        android:background="#187705"
+        android:background="#146304"
         android:text="Continuar"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
