--- a/BienestarBovino/app/src/main/res/layout/register.xml
+++ b/BienestarBovino/app/src/main/res/layout/register.xml
@@ -19,72 +19,90 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="245dp"
-        android:layout_height="43dp"
+        android:layout_width="250dp"
+        android:layout_height="51dp"
+        android:background="#1E8708"
         android:ems="10"
         android:hint="Ingrese su usuario"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.548"
+        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.385" />
+        app:layout_constraintVertical_bias="0.416" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="244dp"
-        android:layout_height="44dp"
+        android:layout_width="252dp"
+        android:layout_height="52dp"
+        android:background="#1E8708"
         android:ems="10"
         android:hint="Ingrese su correo electronico"
         android:inputType="textEmailAddress"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.544"
+        app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.502" />
+        app:layout_constraintVertical_bias="0.512" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="242dp"
-        android:layout_height="53dp"
-        android:text="Button"
+        android:layout_width="251dp"
+        android:layout_height="52dp"
+        android:background="#146304"
+        android:text="Registrar"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.858" />
+        app:layout_constraintVertical_bias="0.804" />
 
     <EditText
         android:id="@+id/editTextTextPassword4"
-        android:layout_width="241dp"
-        android:layout_height="52dp"
+        android:layout_width="251dp"
+        android:layout_height="51dp"
+        android:background="#1E8708"
         android:ems="10"
-        android:hint="Contraseña"
+        android:hint="Confirmar contraseña"
         android:inputType="textPassword"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.558"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.73" />
+        app:layout_constraintVertical_bias="0.7" />
 
     <EditText
         android:id="@+id/editTextTextPassword3"
-        android:layout_width="242dp"
-        android:layout_height="49dp"
+        android:layout_width="251dp"
+        android:layout_height="48dp"
+        android:background="#1E8708"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.608" />
+        app:layout_constraintVertical_bias="0.606" />
 
     <TextView
         android:id="@+id/textView2"
@@ -99,4 +117,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.045" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:text="Iniciar sesión"
+        android:textColor="#4CAF50"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="239dp"
+        tools:layout_editor_absoluteY="634dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="¿Ya tienes una cuenta?"
+        tools:layout_editor_absoluteX="97dp"
+        tools:layout_editor_absoluteY="634dp" />
 </android.support.constraint.ConstraintLayout>
