--- a/BienestarBovino/app/src/main/res/layout/venta.xml
+++ b/BienestarBovino/app/src/main/res/layout/venta.xml
@@ -92,7 +92,7 @@
         android:layout_width="312dp"
         android:layout_height="54dp"
         android:ems="10"
-        android:background="#146304"
+        android:background="#1E8708"
         android:textColor="#FFFFFF"
         android:hint="Ingrese monto de venta"
         android:inputType="textPersonName"
@@ -152,6 +152,8 @@
         android:id="@+id/spinner"
         android:layout_width="324dp"
         android:layout_height="60dp"
+        android:outlineAmbientShadowColor="#000000"
+        android:outlineSpotShadowColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.402"
