--- a/BienestarBovino/app/src/main/res/layout/register.xml
+++ b/BienestarBovino/app/src/main/res/layout/register.xml
@@ -123,16 +123,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:minHeight="48dp"
         android:text="Iniciar sesión"
+        android:textColor="#4CAF50"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="243dp"
-        tools:layout_editor_absoluteY="634dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.733"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.928" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Ya tienes una cuenta? "
-        tools:layout_editor_absoluteX="97dp"
-        tools:layout_editor_absoluteY="634dp" />
+        android:text="¿Ya tiene una cuenta? "
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.366"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.89" />
 </android.support.constraint.ConstraintLayout>
