--- a/BienestarBovino/app/src/main/res/layout/finca.xml
+++ b/BienestarBovino/app/src/main/res/layout/finca.xml
@@ -30,7 +30,7 @@
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textAlignment="center"
-        android:textColorHint="FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -49,7 +49,7 @@
         android:minHeight="48dp"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textColorHint="FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
