--- a/BienestarBovino/app/src/main/res/layout/venta.xml
+++ b/BienestarBovino/app/src/main/res/layout/venta.xml
@@ -91,13 +91,14 @@
         android:id="@+id/editTextTextSale"
         android:layout_width="312dp"
         android:layout_height="54dp"
-        android:ems="10"
         android:background="#1E8708"
-        android:textColor="#FFFFFF"
-        android:textColorHint="@android:color/white"
+        android:ems="10"
         android:hint="Ingrese monto de venta"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.353"
