--- a/BienestarBovino/app/src/main/res/layout/compra.xml
+++ b/BienestarBovino/app/src/main/res/layout/compra.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +76,8 @@
         android:minHeight="48dp"
         android:background="#1E8708"
         android:textColor="#FFFFFF"
+        android:textAlignment="center"
+        android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.253"
@@ -102,9 +106,10 @@
         android:background="#1E8708"
         android:ems="10"
         android:hint="Ingrese el costo"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:inputType="textPersonName"
-        android:textAlignment="viewStart"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -118,6 +123,8 @@
         android:layout_height="50dp"
         android:ems="10"
         android:hint="Ingrese el nombre"
+        android:textAlignment="center"
+        android:textColorHint="@android:color/white"
         android:inputType="textPersonName"
         android:background="#1E8708"
         android:textColor="#FFFFFF"
@@ -171,6 +178,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Identificación"
+        android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -187,6 +195,8 @@
         android:textColor="#FFFFFF"
         android:ems="10"
         android:hint="Ingrese la identificación"
+        android:textAlignment="center"
+        android:textColorHint="@android:color/white"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
