--- a/BienestarBovino/app/src/main/res/layout/login.xml
+++ b/BienestarBovino/app/src/main/res/layout/login.xml
@@ -95,12 +95,12 @@
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="326dp"
         android:layout_height="55dp"
-        android:background="#1E8708"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
         android:ems="10"
         android:hint="Ingrese su correo"
+        android:background="@drawable/rectangle_drawable"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
